--- a/src/app/features/components/register/register.component.html
+++ b/src/app/features/components/register/register.component.html
@@ -1,6 +1,5 @@
-<div class="container">
-  <div class="row">
-    <mat-card>
+<div class="main-div">
+<mat-card>
       <div class="column">
         <mat-card-title>Register Your Account <i class="fa-solid fa-user-plus fa-1x"></i></mat-card-title>
         <div class="row">
@@ -88,5 +87,4 @@
         </div>
       </div>
     </mat-card>
-  </div>
 </div>
