--- a/src/app/features/components/create-article/create-article.component.css
+++ b/src/app/features/components/create-article/create-article.component.css
@@ -1,27 +1,29 @@
-#photo-upload{
-  display: none;
+mat-card{
+  justify-content: center;
+  align-items: center;
+  min-width: 370px;
 }
 
-textarea{
-  font-size: 1.5em;
-  padding: 1em;
-  resize:none;
-  width: 250px;
-  min-height: 200px;
-  border:none;
-  outline:none;
+#article-title-label{
+  margin-bottom: 5px;
+  margin-top: 5px;
+  font-size: 15px;
+}
+#article-content-label{
+  margin-top: 5px;
+}
+#article-title{
+  border: none;
+  font-weight: bold;
+  font-size: 17px;
+  background-color: #F1EFF1;
+  border-radius: 10px;
 }
 
-#article-preview{
-  text-align: right;
-  margin-top: 1em;
+#article-title:focus {
+  outline: none;
 }
 
-#article-preview-image{
-  object-fit: cover;
-  object-position: center;
-  width: 150px;
-  height: 100px;
-  border-radius: 1em;
-  border: 1px dashed gray;
+.col-md input {
+  width: 100%;
 }
