--- a/src/app/features/components/feed/feed.component.css
+++ b/src/app/features/components/feed/feed.component.css
@@ -3,3 +3,10 @@
   bottom: 2em;
   right: 2em;
 }
+
+#articlesFeed{
+  max-width: 500px;
+  margin-top: .5em;
+  margin-left: auto;
+  margin-right: auto;
+}
