--- a/src/app/features/components/create-article/create-article.component.html
+++ b/src/app/features/components/create-article/create-article.component.html
@@ -2,12 +2,26 @@
   <mat-card-header>
     <mat-card-title >Article Editor</mat-card-title>
   </mat-card-header>
+  <mat-card-content>
   <form [formGroup]="articleForm" (ngSubmit)="onSubmit()">
   <div class="container">
     <div class="row" id="article-title-label">
       <div class="col-md">
           Article Title:
-            <input matInput formControlName="title"  id="article-title"/>
+            <textarea matInput formControlName="title" id="article-title"></textarea>
+        <div>
+          <div class="error-message" *ngIf="articleForm.get('title').errors?.whitespace">*Title is required.</div>
+        </div>
+      </div>
+    </div>
+    <div class="row" id="article-summary-label">
+      <div class="col-md">
+        Article Summary:
+        <textarea matInput formControlName="summary" id="article-summary"></textarea>
+        <div>
+          <div class="error-message" *ngIf="articleForm.get('summary').errors?.whitespace">*Summary is required.</div>
+          <div class="error-message" *ngIf="articleForm.get('summary').errors?.maxlengthExceeded">*Summary cannot exceed 200 characters.</div>
+        </div>
       </div>
     </div>
     <div class="row" id="article-content-label">
@@ -16,14 +30,18 @@
       </div>
     </div>
     <div class="row" id="article-content">
-      <div class="col-md-12">
-        <quill-editor [styles]="{height: '400px'}" (onEditorChanged)="changedEditor($event)"></quill-editor>
+      <div>
+        <quill-editor [styles]="{height: '310px', 'max-width': '1200px'}" (onEditorChanged)="changedEditor($event)" ></quill-editor>
+      </div>
+      <div>
+        <div class="error-message" *ngIf="articleForm.get('content').errors?.whitespace">*Content is required.</div>
       </div>
     </div>
   </div>
   <mat-card-actions align="end">
-    <button mat-flat-button color="primary" style="margin-right: 5px" type="submit">Create</button>
-    <button mat-flat-button color="accent"  type="button" (click)="onPreviewClicked()">Preview</button>
+    <button class="submit-button" mat-flat-button style="margin-right: 5px" type="submit" [disabled]="articleForm.invalid">Create</button>
+    <button class="preview-button" mat-flat-button color="accent"  type="button" (click)="onPreviewClicked()" [disabled]="articleForm.invalid">Preview</button>
   </mat-card-actions>
   </form>
+  </mat-card-content>
 </mat-card>
