--- a/src/app/features/components/create-article/create-article.component.css
+++ b/src/app/features/components/create-article/create-article.component.css
@@ -10,7 +10,7 @@ mat-card{
   margin-top: 5px;
   font-size: 15px;
 }
-#article-summary-label, #article-content-label{
+#article-summary-label{
   margin-top: 20px;
 }
 #article-title, #article-summary{
@@ -24,7 +24,7 @@ mat-card{
   outline: none;
 }
 
-.col-md textarea {
+textarea {
   width: 100%;
 }
 
@@ -40,5 +40,55 @@ mat-card{
   color: #999;
   border: 1px solid #ccc;
   cursor: not-allowed;
+}
+
+.fileUploadContainer {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 150px;
+  height: 150px;
+  border: dashed 1px #979797;
+  text-align: center;
+  justify-content: center;
+
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 100%;
+    max-width: 100%;
+  }
+
+  .noImageContainet {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 11px;
+    button {
+      font-size: 11px;
+    }
+  }
+
+  .deleteButton{
+    position: absolute;
+    z-index: 10;
+    top: -15px;
+    inset-inline-end: -10px;
+    opacity:50%
+  }
+
+  .fileInput {
+    position: absolute;
+    z-index: 9;
+    opacity: 0;
+    height: 100%;
+    width: 100%;
+    left: 0px;
+    top: 0px;
+    cursor: pointer;
+  }
 }
 
