--- a/src/app/features/components/feed-article/feed-article.component.html
+++ b/src/app/features/components/feed-article/feed-article.component.html
@@ -1,15 +1,13 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>{{ articleData?.title }}</mat-card-title>
-    <mat-card-subtitle> <div class="html-content-container">{{htmlContent}}</div></mat-card-subtitle>
+    <mat-card-title style="font-size: 35px">{{ articleData?.title }}</mat-card-title>
+  <mat-card-subtitle>{{articleData.authorName}}, {{articleData.publicationDate}}</mat-card-subtitle>
   </mat-card-header>
-<!--  <img mat-card-image src="">-->
   <mat-card-content>
-    Like, Share and Subscribe!
+    <div> {{articleData.summary}}"</div>
+    <img src="{{articleData.titlePhotoContent}}">
   </mat-card-content>
   <mat-card-actions>
-    <mat-icon class="action-item" color="warn">chat_bubble</mat-icon>
     <mat-icon class="action-item" color="warn">favorite_border</mat-icon>
-    <mat-icon class="action-item" color="warn">save</mat-icon>
   </mat-card-actions>
 </mat-card>
