--- a/src/app/features/components/article/article.component.css
+++ b/src/app/features/components/article/article.component.css
@@ -1,10 +1,4 @@
-#create-article-button{
-  position: fixed;
-  bottom: 2em;
-  right: 2em;
-}
-
-#articlesFeed{
+#articleWrapper{
   max-width: 1200px;
   min-height: 700px;
   margin-left: auto;
@@ -12,3 +6,7 @@
   margin-top: 100px;
 }
 
+mat-card{
+  margin-top: 50px;
+  background-color: #b0bec5;
+}
