--- a/src/app/features/components/feed-article/feed-article.component.html
+++ b/src/app/features/components/feed-article/feed-article.component.html
@@ -1,13 +1,14 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title style="font-size: 35px">{{ articleData?.title }}</mat-card-title>
-  <mat-card-subtitle>{{articleData.authorName}}, {{articleData.publicationDate}}</mat-card-subtitle>
+    <mat-card-title style="font-size: 35px; cursor:pointer" (click)="onFeedArticleClick()">
+      <img src="{{articleData.titlePhotoContent}}" style="max-height: 280px; max-width: 320px">
+    </mat-card-title>
+  <mat-card-subtitle style="margin-top: 5px">{{articleData.authorName}}, {{articleData.publicationDate}}</mat-card-subtitle>
   </mat-card-header>
-  <mat-card-content>
-    <div> {{articleData.summary}}"</div>
-    <img src="{{articleData.titlePhotoContent}}">
+  <mat-card-content (click)="onFeedArticleClick()" style="cursor:pointer">
+    <div style="font-size: 30px;margin-top: 10px; font-weight: bold; line-height: 1"> {{articleData.title}}"</div>
   </mat-card-content>
-  <mat-card-actions>
+  <mat-card-actions style="align-self: flex-start">
     <mat-icon class="action-item" color="warn">favorite_border</mat-icon>
   </mat-card-actions>
 </mat-card>
