--- a/src/app/features/components/article/article.component.css
+++ b/src/app/features/components/article/article.component.css
@@ -1,9 +1,7 @@
 #articleWrapper{
   max-width: 1200px;
   min-height: 700px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 100px;
+  margin: 100px auto;
 }
 
 mat-card{
