Added member management logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-layout></app-layout>
-<mat-toolbar class="footer" style="margin-top: 50px">
+<mat-toolbar style="margin-top: 50px">
   <span style="margin: auto">© 2024 CC Website. All rights reserved.</span>
 </mat-toolbar>
 <router-outlet />
