--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -4,8 +4,8 @@
     <button mat-button [matMenuTriggerFor]="afterMenu"><span style="color:white"><i class="fa-solid fa-user" style="--fa-primary-color: white"></i>  Hello, {{getUserName()}}!</span></button>
     <mat-menu #afterMenu="matMenu" xPosition="after">
       <button mat-menu-item *ngIf="getRole()" (click)="logout()" >Logout</button>
-      <button mat-menu-item (click)="goToSomePage()">Grupuri de suport</button>
-      <button mat-menu-item *ngIf="checkIfUserRole()" (click)="goToSomePage()">SomePage</button>
+      <button mat-menu-item (click)="goToSupportGroups()">Grupuri de suport</button>
+      <button mat-menu-item (click)="goToFeed()">Articole</button>
     </mat-menu>
   </div>
   <div *ngIf="checkTokenValidity()" class="menu-position">
