Added create group logic and components

--- a/src/app/features/components/add-member/add-member.component.css
+++ b/src/app/features/components/add-member/add-member.component.css
@@ -1,3 +1,8 @@
+.email-list {
+  max-height: 450px;
+  overflow-y: auto;
+}
+
 .email-item {
   display: flex;
   align-items: center;
@@ -8,8 +13,4 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-}
-
-.add-button {
-  margin-left: 16px;
 }
