--- a/src/app/features/components/add-member/add-member.component.html
+++ b/src/app/features/components/add-member/add-member.component.html
@@ -1,4 +1,5 @@
-<mat-form-field>
+<div class="email-list">
+<mat-form-field style="width:100%">
   <input matInput (keyup)="applyFilter($event)" placeholder="Introduceți un email...">
 </mat-form-field>
 
@@ -6,7 +7,11 @@
   <mat-list-item *ngFor="let email of filteredEmails" class="email-item">
     <div class="email-info">
       <div>{{ email }}</div>
-      <button mat-raised-button color="accent" (click)="addMember(email)" class="add-button" [disabled]="isMemberAdded(email)">Add Member</button>
-    </div>
+      <div class="buttons-container">
+        <button mat-raised-button color="primary" style="margin-right: 5px" (click)="removeMember(email)" class="remove-button" [disabled]="!isMemberAdded(email)">Șterge</button>
+        <button mat-raised-button color="accent" (click)="addMember(email)" class="add-button" [disabled]="isMemberAdded(email)">Adaugă</button>
+      </div>
+      </div>
   </mat-list-item>
 </mat-list>
+</div>
