--- a/src/app/features/components/support-groups-table/support-groups-table.component.html
+++ b/src/app/features/components/support-groups-table/support-groups-table.component.html
@@ -1,4 +1,12 @@
 <div class="table-container">
+  <div class="search-container">
+    <mat-form-field style="width: 100%">
+      <input matInput placeholder="Caută un grup..." #searchInput (keyup)="applyFilter($event)">
+      <button *ngIf="searchInput.value" matSuffix mat-icon-button aria-label="Clear" (click)="clearSearchInput(searchInput)">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+  </div>
   <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
     <ng-container matColumnDef="groupName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header="groupName" sortActionDescription="Sort by groupName">
@@ -32,12 +40,12 @@
         <button mat-raised-button color="accent"
                 style="margin-bottom: 5px; width: 150px"
                 (click)="onAddMembersClick(element.groupName)"
-                *ngIf="checkRole()">Adaugă membri</button>
+                *ngIf="checkRole()">Gestionează</button>
       </td>
     </ng-container>
     <ng-container  *ngIf="noGroups">
       <tr class="noDataRow" *matNoDataRow>
-        <td [attr.colspan]="displayedColumns.length">
+        <td [attr.colspan]="displayedColumns.length" style="color: white">
           Nu am găsit grupuri.
         </td>
       </tr>
@@ -49,3 +57,6 @@
                  aria-label="Select page of support groups">
   </mat-paginator>
 </div>
+
+<button (click)="onCreateGroupClick()" mat-fab id="create-group-button"><mat-icon>add</mat-icon></button>
+
