--- a/src/app/features/components/support-groups-table/support-groups-table.component.html
+++ b/src/app/features/components/support-groups-table/support-groups-table.component.html
@@ -32,15 +32,21 @@
       </th>
       <td mat-cell *matCellDef="let element">
         <button mat-raised-button
-                [disabled]="element.isMember" color="primary"
-                style="margin-bottom: 5px; margin-top: 5px; width: 150px"
-                (click)="joinGroup(element.groupName)">
-          Alătură-te
-        </button>
-        <button mat-raised-button color="accent"
-                style="margin-bottom: 5px; width: 150px"
-                (click)="onAddMembersClick(element.groupName)"
-                *ngIf="checkRole()">Gestionează</button>
+                color="primary"
+                class="action-button"
+                [disabled]="element.isMember"
+                (click)="joinGroup(element.groupName); $event.stopPropagation()"
+                *ngIf="!checkRole()">Alătură-te</button>
+        <button mat-raised-button
+                color="accent"
+                class="action-button"
+                (click)="onAddMembersClick(element.groupName); $event.stopPropagation()"
+                *ngIf="checkRole()">Membri</button>
+        <button mat-raised-button
+                color="primary"
+                class="action-button"
+                (click)="openConfirmationDialog(element.groupName); $event.stopPropagation()"
+                *ngIf="checkRole()">Șterge</button>
       </td>
     </ng-container>
     <ng-container  *ngIf="noGroups">
@@ -51,7 +57,7 @@
       </tr>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns" ></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr class="table-row-style" mat-row *matRowDef="let row; columns: displayedColumns;" (click)="goToGroup(row.groupName)"></tr>
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
                  aria-label="Select page of support groups">
