--- a/src/app/features/components/feed-article/feed-article.component.html
+++ b/src/app/features/components/feed-article/feed-article.component.html
@@ -6,7 +6,7 @@
   <mat-card-subtitle style="margin-top: 5px">{{articleData.authorName}}, {{articleData.publicationDate}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content (click)="onFeedArticleClick()" style="cursor:pointer">
-    <div style="font-size: 30px;margin-top: 10px; font-weight: bold; line-height: 1"> {{articleData.title}}"</div>
+    <div style="font-size: 30px;margin-top: 10px; font-weight: bold; line-height: 1"> {{articleData.title}}</div>
   </mat-card-content>
   <mat-card-actions style="align-self: flex-start">
     <mat-icon class="action-item" color="warn">favorite_border</mat-icon>
