--- a/src/app/features/components/support-group-post/support-group-post.component.html
+++ b/src/app/features/components/support-group-post/support-group-post.component.html
@@ -8,25 +8,20 @@
     <mat-card-content>
       <p>{{ postData.content }}</p>
     </mat-card-content>
-    <mat-card-actions>
       <button mat-icon-button>
         <mat-icon>thumb_up</mat-icon>
       </button>
-<!--      <button mat-icon-button>-->
-<!--        <mat-icon>comment</mat-icon>-->
-<!--      </button>-->
-    </mat-card-actions>
-<!--    <button mat-icon-button (click)="toggleDiscussion()">-->
-<!--      <mat-icon>{{ showDiscussion ? 'expand_less' : 'expand_more' }}</mat-icon>-->
-<!--    </button>-->
-<!--    <mat-expansion-panel *ngIf="showDiscussion">-->
-<!--    </mat-expansion-panel>-->
-<!--    <mat-form-field class="comment-field">-->
-<!--      <input matInput placeholder="Comentariul tău...">-->
-<!--    </mat-form-field>-->
-<!--    <button mat-icon-button class="send-button">-->
-<!--      <mat-icon>send</mat-icon>-->
-<!--    </button>-->
-    <app-comments currentUser="{{postData.authorName}}" postId="{{postData.authorName}}"></app-comments>
+    <mat-accordion class="scrollable-accordion">
+      <mat-expansion-panel
+                          (opened)="showDiscussion = true"
+                          (closed)="showDiscussion = false">
+        <mat-expansion-panel-header expandedHeight="auto">
+          <mat-panel-title>
+            Comentarii
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <app-comments currentUser="{{postData.authorName}}" postId="{{postData.postId}}"></app-comments>
+      </mat-expansion-panel>
+    </mat-accordion>
   </mat-card>
 </div>
