--- a/src/app/features/comments/components/comments/comments.component.html
+++ b/src/app/features/comments/components/comments/comments.component.html
@@ -1,13 +1,11 @@
 <div class="comments">
-    <h3 class="comments-title">Comments</h3>
-    <div class="comments-form-title">Write comment</div>
     <app-comment-form
             submitLabel="Write"
             (handleSubmit)="addComment({text: $event, parentId:null})">
     </app-comment-form>
     <div class="comments-container">
         <app-comment
-          *ngFor="let comment of comments"
+          *ngFor="let comment of parentComments"
           [comment]="comment"
           [currentUser]="currentUser"
           [replies]="getReplies(comment.id)"
