--- a/src/app/features/comments/components/comment-form/comment-form.component.html
+++ b/src/app/features/comments/components/comment-form/comment-form.component.html
@@ -5,8 +5,8 @@
   <button mat-icon-button class="send-button" type="submit" [disabled]="form.invalid">
     <mat-icon>send</mat-icon>
   </button>
-  <button *ngIf="hasCancelButton" type="button" class="comment-form-button comment-form-cancel-button"
+  <div *ngIf="hasCancelButton" type="button"
   (click)="handleCancel.emit()">
     Cancel
-  </button>
+  </div>
 </form>
