--- a/src/app/features/components/support-group-post/support-group-post.component.html
+++ b/src/app/features/components/support-group-post/support-group-post.component.html
@@ -3,7 +3,7 @@
     <mat-card-header>
       <img mat-card-avatar>
       <mat-card-title>{{ postData.authorName }}</mat-card-title>
-      <mat-card-subtitle>{{ postData.publicationDate }}</mat-card-subtitle>
+      <mat-card-subtitle>{{ postData.publicationDate != undefined ? postData.publicationDate : getDate() }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <p>{{ postData.content }}</p>
@@ -20,7 +20,7 @@
             Comentarii
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <app-comments currentUser="{{postData.authorName}}" postId="{{postData.postId}}"></app-comments>
+        <app-comments currentUser="{{currentUsername}}" postId="{{postData.postId}}"></app-comments>
       </mat-expansion-panel>
     </mat-accordion>
   </mat-card>
