--- a/src/app/features/user profile/components/profile/profile.component.html
+++ b/src/app/features/user profile/components/profile/profile.component.html
@@ -5,10 +5,15 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
-              <img src="{{profileInfo.profilePhoto}}}" alt="UserProfilePhoto" class="rounded-circle" width="150">
+              <img src="{{profileInfo.profilePhoto}}" alt="UserProfilePhoto" class="rounded-circle" width="150">
               <div class="mt-3">
                 <h4>{{profileInfo.firstName}} {{profileInfo.lastName}}</h4>
                 <p class="text-secondary mb-1">{{profileInfo.email}}</p>
+                <button id="uploadButton" mat-raised-button color="primary"
+                        style="width:100%; height: 40px; opacity: 80%;"
+                        (click)="handleUploadButtonClick()">Încarcă o poză de profil</button>
+                <input type="file" id="profilePhotoInput" style="display: none;" accept="image/*"
+                       (change)="setFileData($event)">
               </div>
             </div>
           </div>
