--- a/src/app/features/user profile/components/profile/profile.component.html
+++ b/src/app/features/user profile/components/profile/profile.component.html
@@ -4,8 +4,13 @@
       <div class="col-md-4 mb-3">
         <div class="card">
           <div class="card-body">
-            <div class="d-flex flex-column align-items-center text-center">
-              <img src="{{profileInfo.profilePhoto}}" alt="UserProfilePhoto" class="rounded-circle" width="150">
+            <div class="d-flex flex-column align-items-center text-center position-relative">
+              <div style="position: relative;">
+                <img src="{{profileInfo.profilePhoto}}" alt="UserProfilePhoto" class="rounded-circle" width="150">
+                <button class="btn-remove-photo" (click)="removePhoto()" title="Șterge poza" *ngIf="profileInfo.profilePhoto">
+                  <i class="fas fa-times"></i>
+                </button>
+              </div>
               <div class="mt-3">
                 <h4>{{profileInfo.firstName}} {{profileInfo.lastName}}</h4>
                 <p class="text-secondary mb-1">{{profileInfo.email}}</p>
@@ -22,59 +27,83 @@
       <div class="col-md-8">
         <div class="card mb-3">
           <div class="card-body">
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0">Full Name</h6>
-              </div>
-              <div class="col-sm-9 text-secondary">
-                Kenneth Valdez
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0">Email</h6>
-              </div>
-              <div class="col-sm-9 text-secondary">
-                fipjukmuh.al
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0">Phone</h6>
-              </div>
-              <div class="col-sm-9 text-secondary">
-                (239) 816-9029
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0">Mobile</h6>
-              </div>
-              <div class="col-sm-9 text-secondary">
-                (320) 380-4539
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0">Address</h6>
-              </div>
-              <div class="col-sm-9 text-secondary">
-                Bay Area, San Francisco, CA
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-12">
-                <a class="btn btn-info " target="__blank" href="#">Edit</a>
-              </div>
-            </div>
+            <mat-expansion-panel>
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  Detalii profil
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+              <form [formGroup]="profileDetailsForm" (ngSubmit)="onProfileDetailsSubmit()" class="form-container">
+                <div>
+                  <mat-form-field>
+                    <mat-label>Prenume</mat-label>
+                    <input matInput formControlName="firstName" (input)="onInputChange()" [value]="profileInfo.firstName">
+                    <mat-error *ngIf="((!profileDetailsForm.get('firstName').valid ||
+                                       profileDetailsForm.get('firstName').errors?.whitespace) && formChanged) ">
+                      Prenumele nu este valid!
+                    </mat-error>
+<!--                    <mat-error *ngIf="profileDetailsForm.get('firstName').dirty && profileDetailsForm.get('firstName').errors?.required">-->
+<!--                      Prenumele este obligatoriu!-->
+<!--                    </mat-error>-->
+                  </mat-form-field>
+                </div>
+                <div>
+                  <mat-form-field>
+                    <mat-label>Nume</mat-label>
+                    <input matInput formControlName="lastName" (input)="onInputChange()" [value]="profileInfo.lastName">
+                    <mat-error *ngIf="(!profileDetailsForm.get('lastName').valid ||
+                                       profileDetailsForm.get('lastName').errors?.whitespace) &&
+                                       !profileDetailsForm.get('lastName').errors?.required">
+                      Numele nu este valid!
+                    </mat-error>
+                    <mat-error *ngIf="profileDetailsForm.get('lastName').dirty && profileDetailsForm.get('lastName').errors?.required">
+                      Numele este obligatoriu!
+                    </mat-error>
+                  </mat-form-field>
+                </div>
+                <div>
+                  <mat-form-field>
+                    <mat-label>Email</mat-label>
+                    <input matInput formControlName="email" (input)="onInputChange()" [value]="profileInfo.email">
+                  </mat-form-field>
+                </div>
+                <div>
+                  <mat-form-field>
+                    <mat-label>Tip de cont</mat-label>
+                    <input matInput formControlName="role" [value]="profileInfo.role" readonly>
+                  </mat-form-field>
+                </div>
+                <div class="button-container">
+                  <button mat-raised-button color="primary" type="submit" [disabled]="!profileDetailsForm.valid || !formChanged">Modifică</button>
+                  <button mat-raised-button color="warn" *ngIf="formChanged" (click)="resetForm()">Anulează</button>
+                </div>
+              </form>
+            </mat-expansion-panel>
+
+            <!--            <mat-expansion-panel>-->
+<!--              <mat-expansion-panel-header>-->
+<!--                <mat-panel-title>-->
+<!--                  Grupuri de suport-->
+<!--                </mat-panel-title>-->
+<!--              </mat-expansion-panel-header>-->
+<!--              <div>-->
+<!--                <button mat-raised-button color="primary" (click)="submitChanges('section2')">Submit</button>-->
+<!--              </div>-->
+<!--            </mat-expansion-panel>-->
+<!--            <mat-expansion-panel>-->
+<!--              <mat-expansion-panel-header>-->
+<!--                <mat-panel-title>-->
+<!--                  Articole preferate-->
+<!--                </mat-panel-title>-->
+<!--              </mat-expansion-panel-header>-->
+<!--              <div>-->
+<!--                <button mat-raised-button color="primary" (click)="submitChanges('section3')">Submit</button>-->
+<!--              </div>-->
+<!--            </mat-expansion-panel>-->
           </div>
         </div>
       </div>
+
     </div>
   </div>
 </div>
